v2.1.0
- Added code to gather series/movie/episode plot descriptions from DramaCool site and from IMDB.com
- Added progress bar to show progress of drama gathering activity.
- Changed episode name to reflect the episode name from IMDB.com if available.

v2.0.5
- Fixed code stripping unnecessary whitespace from beginning and end of all listings.
- Fixed "ListAZ" function so that items starting with other than English alphabet works now.
- Fixed issue where title for one series was double-quoted in HTML, leaving no title for series in Kodi.

v2.0.4
- Added ability to save which episode was last seen per series.
- Added "Recently Viewed" submenu to main menu.
- Moved "Please Wait!,Loading selected video" notification after check to see if video ID is non-blank.

v2.0.3
- Fixed "[RAW]" prefix code.

v2.0.2
- More indentation fixes throughout the addon
- Added seperator lines between function definitions.
- Changed "Search Movies" item back to "Search".
- Removed "Search Dramas", as website cannot differenate between them.
- Removed "Search KShows", as website cannot differenate between them.
- Removed "Movies by Genre", as website does not differerate between Movies and Dramas.
- Added "Most Popular Dramas" submenu to main menu.
- Added "Popular Stars" submenu to main menu.
- Added "Search Stars" submenu to main menu.
- Added "[RAW]" prefix before episodes that are not subbed.

v2.0.1
- Changed "Search" item to "Search Dramas" item in main menu.
- Created "Dramas by Country" submenu from "GetMenu" function call made in "HOME" function.
- Added "Dramas by Genre" submenu to main menu.
- Created "Movies by Country" submenu from "GetMenu" function call made in "HOME" function.
- Added "Movies by Genre" submenu to main menu
- Added "Search Movies" item to main menu.
- Added "Search KShows" item to main menu.

v2.0
- Initial forked release
- Fixed inconsistent indentation issues throughout the addon
- Changed addon icon